--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 @layer fonts {
   @font-face {
     font-family: work-regular;
-    src: url(/assets/fonts/static/WorkSans-Regular.ttf);
+    src: url(assets/fonts/static/WorkSans-Regular.ttf);
   }
   
   @font-face {
@@ -33,8 +33,27 @@
 }
 
 p{
-  font: work-regular;
-  font-size: .825px;
+  font-family: work-regular;
+  font-size: .9rem;
+  color: var(--Purple-600);
+  line-height: 1.6;
+  font-weight: 400;
+}
+
+h1{
+  font-family: work-bold;
+  line-height: 1.6;
+  font-weight: 700;
+  font-size: 2rem;
+  color: var(--Purple-950);
+}
+
+h3{
+  font-family: work-semibold;
+  line-height: 1.6;
+  font-weight: 600;
+  font-size: 1rem;
+  color: var(--Purple-950);
 }
 
 body{
@@ -47,7 +66,7 @@ body{
   display: flex;
 justify-content: center;
 align-items:center;
-height: 100vh;
+height: 100%;
 }
 
 .faq__container{
@@ -55,7 +74,7 @@ height: 100vh;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%); */
-
+margin: 5rem 0;
 width: 90%;
 height: max-content;
 
@@ -79,4 +98,21 @@ height: max-content;
   align-items: center;
   gap: 3rem;
   margin: 1rem 0;
+}
+
+.faq{
+  margin: 1rem 0;
+}
+
+hr{
+  
+  border: 1px solid hsl(275, 100%, 97%);
+}
+
+.faq-answer{
+  margin: 1rem;
+}
+
+.hidden{
+  display: none;
 }
