--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body{
   display: flex;
 justify-content: center;
 align-items:center;
-height: 100%;
+//height: 100vh;
 }
 
 .faq__container{
@@ -86,8 +86,7 @@ height: max-content;
 
 .headings{
   display: flex;
-  gap: 3rem;
-  
+  gap: 2rem;
   align-items: center;
   margin: 1rem 0;
 }
