--- a/style.css
+++ b/style.css
@@ -70,14 +70,9 @@ align-items:center;
 }
 
 .faq__container{
-  /* position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
+
 margin: 5rem 0;
 width: 90%;
-height: max-content;
-
 
   background: var(--White);
   padding: 1rem;
@@ -90,7 +85,7 @@ height: max-content;
   align-items: center;
   margin: 1rem 0;
 }
-
+{}
 .faq__heading{
   display: flex;
   justify-content: space-between;
@@ -107,11 +102,23 @@ hr{
   
   border: 1px solid hsl(275, 100%, 97%);
 }
-
-.faq-answer{
-  margin: 1rem;
-}
-
 .hidden{
   display: none;
+  
+}
+
+@media screen and (min-width: 730px) {
+  body{
+    background-image: url(/assets/images/background-pattern-desktop.svg);
+    height: 100vh;
+    background-position: top;
+  }
+  
+  .faq__container{
+    width: max-content;
+  }
+  
+  .faq__answer{
+    width: 100%;
+  }
 }
